SSDM-10191: fixing Java 11 module visibility problem for parsing xml via jython (important in microscopy)